--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,11 @@
 #tanks count at initialization  没有空格之间等于号
-initTankCount=10
+initTankCount=3
 tankSpeed=5
 bulletSpeed=10
 gameWidth=1080
 gameHeight=720
 
 #fireStrategy
-goodFS=com.slt.myTest.designPatternTank.tank04.stragety.FourDirFireStrategy
+goodFS=com.slt.myTest.designPatternTank.tank05.stragety.FourDirFireStrategy
+#colliders 逗号隔开
+colliders=com.mashibing.tank.cor.BulletTankCollider,com.mashibing.tank.cor.TankTankCollider
